--- a/donate.html
+++ b/donate.html
@@ -89,6 +89,7 @@
       object-fit: cover;
       border-radius: 10px;
       margin-bottom: 1.5rem;
+      animation: fadeInUp 1.2s ease-out both;
     }
 
     .intro-text {
@@ -121,6 +122,7 @@
       object-fit: cover;
       border-radius: 8px;
       margin-bottom: 1rem;
+      animation: fadeInUp 1.2s ease both;
     }
 
     .donate-item p {
@@ -172,6 +174,32 @@
       nav ul li a {
         width: 100%;
         padding: 12px 20px;
+      }
+
+      .hero-text {
+        font-size: 1.8rem;
+        padding: 0 1rem;
+      }
+
+      .intro-text {
+        font-size: 1rem;
+        padding: 0 1rem;
+      }
+
+      .donate-button {
+        width: 100%;
+        justify-content: center;
+      }
+    }
+
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
       }
     }
   </style>
