--- a/news.html
+++ b/news.html
@@ -164,16 +164,82 @@
       }
     }
 
+    /* Tablet View */
     @media (max-width: 768px) {
       .hero-description h1 {
         font-size: 2rem;
       }
+
       .hero-description p {
         font-size: 1rem;
       }
+
       article img {
-        width: 100%;
         max-width: 100%;
+      }
+
+      nav ul {
+        gap: 0.5rem;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+
+      .nav-container {
+        flex-direction: column;
+        gap: 1rem;
+      }
+
+      .logo img {
+        height: 40px;
+      }
+
+      h2 {
+        font-size: 2rem;
+      }
+
+      article h3 {
+        font-size: 1.5rem;
+      }
+
+      main {
+        padding: 2rem 1rem;
+      }
+    }
+
+    /* Phone View */
+    @media (max-width: 480px) {
+      .hero-description {
+        padding: 1rem;
+        max-width: 90%;
+      }
+
+      .hero-description h1 {
+        font-size: 1.5rem;
+      }
+
+      .hero-description p {
+        font-size: 0.9rem;
+      }
+
+      nav ul {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      nav ul li a {
+        padding: 0.5rem;
+      }
+
+      article h3 {
+        font-size: 1.3rem;
+      }
+
+      article p {
+        font-size: 0.95rem;
+      }
+
+      footer {
+        font-size: 0.9rem;
       }
     }
   </style>
