--- a/about.html
+++ b/about.html
@@ -49,6 +49,7 @@
       flex-wrap: wrap;
       gap: 1rem;
       margin: 0;
+      transition: max-height 0.3s ease;
     }
 
     nav ul li a {
@@ -257,6 +258,38 @@
       font-size: 0.9rem;
     }
 
+    /* Hamburger button styles */
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      justify-content: space-around;
+      width: 28px;
+      height: 22px;
+      cursor: pointer;
+      z-index: 200;
+    }
+
+    .hamburger span {
+      display: block;
+      width: 100%;
+      height: 3px;
+      background: white;
+      border-radius: 2px;
+      transition: all 0.3s ease;
+    }
+
+    .hamburger.active span:nth-child(1) {
+      transform: rotate(45deg) translate(5px, 5px);
+    }
+
+    .hamburger.active span:nth-child(2) {
+      opacity: 0;
+    }
+
+    .hamburger.active span:nth-child(3) {
+      transform: rotate(-45deg) translate(5px, -5px);
+    }
+
     /* ------------------- */
     /* Responsive Media Queries */
 
@@ -282,19 +315,29 @@
     /* Mobile screens (up to 767px) */
     @media screen and (max-width: 767px) {
       .nav-container {
-        flex-direction: column;
-        align-items: flex-start;
+        flex-direction: row;
+        align-items: center;
       }
 
       nav ul {
         flex-direction: column;
         gap: 0.5rem;
         width: 100%;
+        max-height: 0;
+        overflow: hidden;
+      }
+
+      nav ul.open {
+        max-height: 500px; /* enough to show menu */
       }
 
       nav ul li a {
         padding: 8px 12px;
         width: 100%;
+      }
+
+      .hamburger {
+        display: flex;
       }
 
       .hero-header {
@@ -332,7 +375,15 @@
         <a href="index.html" class="logo" aria-label="Amari Amman Foundation Home">
           <img src="images/logo.jpg" alt="Amari Amman Foundation Logo" />
         </a>
-        <ul>
+
+        <!-- Hamburger button -->
+        <button class="hamburger" aria-label="Toggle menu" aria-expanded="false" aria-controls="primary-navigation">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+
+        <ul id="primary-navigation">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html" aria-current="page">About</a></li>
           <li><a href="gallery.html">Gallery</a></li>
@@ -449,6 +500,17 @@
 
       changeHeaderColor();
       setInterval(changeHeaderColor, 10000);
+
+      // Hamburger menu toggle
+      const hamburger = document.querySelector('.hamburger');
+      const navMenu = document.getElementById('primary-navigation');
+
+      hamburger.addEventListener('click', () => {
+        const expanded = hamburger.getAttribute('aria-expanded') === 'true' || false;
+        hamburger.setAttribute('aria-expanded', !expanded);
+        hamburger.classList.toggle('active');
+        navMenu.classList.toggle('open');
+      });
     });
   </script>
 </body>
